--- a/ExerciceReproduction/exercice_reproduction_site.html
+++ b/ExerciceReproduction/exercice_reproduction_site.html
@@ -3,6 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Exercice_Reproduction_Site</title>
+	<style type="text/css">
+		table
+		{
+			border-collapse: collapse;
+		}
+		td,th
+		{
+			border: 1px solid black;
+		}
+	</style>
 </head>
 <body>
 		<span id=accueil><span>
@@ -109,7 +119,18 @@
 					<td>Age</td>
 					<td>Pays</td>
 				</tfoot>
+				<tr>
+					<td>Tartempion</td>
+					<td>27</td>
+					<td><img src="./IMG/france.jpg" width="150px"></td>
+				</tr>
+				<tr>
+					<td>Vanderbruck</td>
+					<td>32</td>
+					<td><img src="./IMG/belgique.png" width="150px"></td>
+				</tr>
 			</table>
+			<a href="./exercice_reproduction_site.html#accueil">Retour en haut</a>
 
 
 
