--- a/ExerciceReproduction/exercice_reproduction_site.html
+++ b/ExerciceReproduction/exercice_reproduction_site.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="zxx">
 <head>
 	<meta charset="UTF-8">
 	<title>Exercice_Reproduction_Site</title>
 	<meta name="description" content="Ceci est une page d'exercice de reproduction d'un site.">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<style type="text/css">
+	<style>
 		body
 		{
 			font-family: 'Montserrat', sans-serif;
@@ -21,7 +21,7 @@
 	</style>
 </head>
 	<body>
-		<span id=accueil><span>
+		<span id="accueil"><span>
 		<nav>
 			<ul>
 				<li>JCVD<a href="./exercice_reproduction_site.html#jcvd"> ICI</a></li>
@@ -32,7 +32,7 @@
 		</nav>
 		<span id="jcvd"></span>
 		<h1>JCVD</h1>
-		<img src="./IMG/jcvd.jpg" width="100%">
+		<img src="./IMG/jcvd.jpg" width="100%" alt="Photo de JeanClaude Vandamme avec un petit chien.">
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cupiditate corrupti, nostrum quia! Ipsa odit illum pariatur, quia vitae. Dolor quisquam perspiciatis nostrum eveniet, adipisci aliquam, aut commodi natus in.
 		</p>
@@ -99,7 +99,7 @@
 		<a href="./exercice_reproduction_site.html#accueil">retour en haut</a>
 		<h1>Résultat de la coupe du monde 2018</h1>
 		<span id="foot"></span>
-		<img src="./IMG/coupe.png" width="250px">
+		<img src="./IMG/coupe.png" width="250px" alt="Image du logo de la coupe du Monde de football 2018">
 		<ol>
 			<li>France</li>
 			<li>Croatie</li>
@@ -128,12 +128,12 @@
 			<tr>
 				<td>Tartempion</td>
 				<td>27</td>
-				<td><img src="./IMG/france.jpg" width="150px"></td>
+				<td><img src="./IMG/france.jpg" width="150px" alt="Drapeau de la France"></td>
 			</tr>
 			<tr>
 				<td>Vanderbruck</td>
 				<td>32</td>
-				<td><img src="./IMG/belgique.png" width="150px"></td>
+				<td><img src="./IMG/belgique.png" width="150px" alt="Drapeau de la Belgique"></td>
 			</tr>
 		</table>
 		<a href="./exercice_reproduction_site.html#accueil">Retour en haut</a>
