--- a/ExerciceReproduction/exercice_reproduction_site.html
+++ b/ExerciceReproduction/exercice_reproduction_site.html
@@ -19,12 +19,20 @@
 
 		td,th
 		{
-			border: 1px solid black;
+			border: 3px solid black;
+			text-align: center;
+		}
+
+		thead
+		{
+			font-weight: bolder;
 		}
 
 		.img
 		{
-			width: 100%;
+			width: 98%;
+			border: 5px solid black;
+			border-radius: 5px;
 		}
 	</style>
 </head>
