Commit de fin de journée

--- a/ExerciceSquelette/index.html
+++ b/ExerciceSquelette/index.html
@@ -10,7 +10,7 @@
 		<article>
 			<section></section>
 		</article>
-		<aside></aside>
+		<section></section>
 		<footer></footer>
 	</body>
 </html>
