--- a/ExerciceReproduction/index.html
+++ b/ExerciceReproduction/index.html
@@ -40,10 +40,10 @@
 		<span id="accueil"></span>
 		
 		<ul>
-			<li>JCVD<a href="./exercice_reproduction_site.html#jcvd"> ICI</a></li>
-			<li>Patrick Sebastien<a href="./exercice_reproduction_site.html#patrick"> ICI</a></li>
-			<li>Classement Coupe du Monde 2018<a href="./exercice_reproduction_site.html#foot"> ICI</a></li>
-			<li>Tableau<a href="./exercice_reproduction_site.html#tableau"> ICI</a></li>
+			<li>JCVD<a href="./index.html#jcvd"> ICI</a></li>
+			<li>Patrick Sebastien<a href="./index.html#patrick"> ICI</a></li>
+			<li>Classement Coupe du Monde 2018<a href="./index.html#foot"> ICI</a></li>
+			<li>Tableau<a href="./index.html#tableau"> ICI</a></li>
 		</ul>
 		
 		<span id="jcvd"></span>
@@ -89,7 +89,7 @@
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur pariatur atque doloribus accusantium perferendis impedit qui tempore voluptas excepturi aut consequatur aliquid, facere quod ratione assumenda eaque, distinctio. Libero, incidunt?
 		</p>
 
-		<a href="./exercice_reproduction_site.html#accueil">retour en haut</a>
+		<a href="./index.html#accueil">retour en haut</a>
 		<span id="patrick"></span>
 		<h1>Patrick Sebastien</h1>
 
@@ -112,7 +112,7 @@
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus reprehenderit autem numquam ut sint quas enim quidem, eius aliquid doloremque assumenda deleniti dolorem eaque. Maxime error vel nobis ipsam at.
 		</p>
-		<a href="./exercice_reproduction_site.html#accueil">retour en haut</a>
+		<a href="./index.html#accueil">retour en haut</a>
 		<span id="foot"></span>
 		<h1>Résultat de la coupe du monde 2018</h1>
 		<img src="./IMG/coupe.png" width="250" alt="Image du logo de la coupe du Monde de football 2018">
@@ -125,7 +125,7 @@
 		<p>
 			Liens vers le site de la Fifa: <a href="https://fr.wikipedia.org/wiki/F%C3%A9d%C3%A9ration_internationale_de_football_association">FiFa</a>
 		</p>
-		<a href="./exercice_reproduction_site.html#accueil">Retour en haut</a>
+		<a href="index.html#accueil">Retour en haut</a>
 
 		<span id="tableau"></span>
 		<h1>Tableau</h1>
@@ -156,6 +156,6 @@
 				</tr>
 			</tfoot>
 		</table>
-		<a href="./exercice_reproduction_site.html#accueil">Retour en haut</a>
+		<a href="./index.html#accueil">Retour en haut</a>
 	</body>
 </html>
