Envoi exercice Cévé

--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -2,9 +2,103 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<meta name="descritpion" content="Ceci est un cévé HTML réalisé dans le cadre de ma formation à l'IFA" >
 	<title>CéVé</title>
 </head>
 	<body>
+		<section>
+			<header>
+				<h1>Guillaume Ory</h1>
+				<h3>Développeur Web en formation</h3>
+				<p>
+					33, rue Paul Diacre <br>
+					57000 Metz <br>
+					(+33)6 62 13 66 66<br>
+					go281182-arobase-gmail.com<br>
+					GitHub: <a href="https://github.com/GuillaumeIfa">GuillaumeIfa</a><br>
+				</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h3>Experiences Professionnelles</h3>
+			</header>
+			<p>
+				<b>Cinemeccanica,</b> Montreuil -- <i>Technicien de maintenance</i><br>
+				2016<br>
+				Maintenance et installation de projecteurs numériques
+			</p>
+			<p>
+				<b>CinéCentre,</b>Metz -- <i>Responsable Technique & Informatique</i><br>
+				2001 => 2016<br>
+				Gestion des projections (Programmation, Gestion logistique, Branchement multimédia, Création de DCP (Digital Cinema Package))<br>
+				Création, mise en place et Gestion du site internet (cinema-palace-cameo-metz.fr), Dépannage informatique
+			</p>
+			<p>
+				<b>Agence Intérim,</b>Meuse -- <i>Divers</i><br>
+				2000 => 2001<br>
+				Divers postes de manutention, menuiserie.
+			</p>
+		</section>
+		<section>
+			<header>
+				<h3>Formations</h3>
+			</header>
+			<p>
+				<b>IFA,</b> Metz -- <i>Formation Professionelle</i><br>
+				2018<br>
+				Remise à noveau Informatique (HTML, CSS, PHP)
+			</p>
+			<p>
+				<b>Atelier Igloo,</b> Villers-les-Nancy -- <i>Formation Profesionnelle</i><br>
+				2014<br>
+				Webdesigner (Bases HTML, CSS, Joomla, The Gimp)
+			</p>
+			<p>
+				<b>Formats6,</b>Metz -- Projection Numérique<br>
+				2012<br>
+				Perfectionnement à la technique du cinéma numérique.
+			</p>
+			<p>
+				<b>Lycée Pro L.Richier,</b>Bar-le-Duc -- <i>BEP Menuiserie</i>
+			</p>
+		</section>
+		<section>
+			<header>
+				<h3>Compétences</h3>
+			</header>
+			<ul>
+				<li>Logiciels Libres & Linux</li>
+				<li>Maintenance Informatique</li>
+				<li>Vidéoprojection, Projection Numérique</li>
+				<li>Gestion Technique d'un bâtiment</li>
+			</ul>	
+		</section>
+		<section>
+			<header>
+				<h3>Centres d'intérêt</h3>
+			</header>
+			<ul>
+				<li>Linux & Logiciels Libres</li>
+				<li>(The Gimp, LibreOffice, Debian, FramaSoft)</li>
+				<li>Musique (écoute et pratique dans plusieurs groupes (musique électronique, blues, musique hawaïenne, pop, musique expérimentale), organisation de concerts)</li>
+				<li>Électronique (réalisation de pédales d’effets, modification de circuit)</li>
+			</ul>
+		</section>
+		<section>
+			<header>
+				<h3>Langues</h3>
+			</header>
+				<ul>
+					<li>Anglais: Lu & Parlé</li>
+					<li>Espagnol: Notions</li>
+				</ul>
+		</section>
+<!-- 		<section>
+	<header></header>
+	<p></p>
+</section> -->
+		<footer></footer>
 		
 	</body>
 </html>
