Commit de fin de journée

--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="descritpion" content="Ceci est un cévé HTML réalisé dans le cadre de ma formation à l'IFA" >
+	<link rel="stylesheet" href="./SCRIPT/style.css">
 	<title>CéVé</title>
 </head>
 	<body>
 		<section>
 			<header>
 				<h1>Guillaume Ory</h1>
+
 				<h3>Développeur Web en formation</h3>
 				<p>
 					33, rue Paul Diacre <br>
