--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<meta name="descritpion" content="Ceci est un cévé HTML réalisé dans le cadre de ma formation à l'IFA" >
+	<meta name="descritpion" content="Ceci n'est pas un cévé HTML" >
 	<link rel="stylesheet" href="./SCRIPT/style.css">
-	<title>CéVé</title>
+	<title>GllmR</title>
 </head>
 	<body>
 		<section>
