--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -10,8 +10,7 @@
 		<section>
 			<header>
 				<h1>Guillaume Ory</h1>
-
-				<h3>Développeur Web en formation</h3>
+				<h2>Développeur Web en formation</h2>
 				<p>
 					33, rue Paul Diacre <br>
 					57000 Metz <br>
@@ -23,7 +22,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Experiences Professionnelles</h3>
+				<h3>Expériences Professionnelles</h3>
 			</header>
 			<article>
 				<h4>Cinemeccanica, Montreuil -- <i>Technicien de maintenance</i></h4>
@@ -84,6 +83,15 @@
 			<header>
 				<h3>Compétences</h3>
 			</header>
+			<div class="turn">
+				HTML
+			</div>
+			<div class="turn">
+				CSS
+			</div>
+			<div class="turn">
+				PHP
+			</div>
 			<ul>
 				<li>Logiciels Libres & Linux</li>
 				<li>Maintenance Informatique</li>
@@ -125,9 +133,9 @@
 				<label>Motif du message:</label>
 				<input type="radio" name="radio" value="renseignement">Renseignements 
 				<input type="radio" name="radio" value="embauche">Embauche 
-				<input type="radio" name="radio" value="insulte">Insultes <br>
+				<input type="radio" name="radio" value="insulte">Insultes <br><br>
 				<label for="sujet">Sujet:</label><br>
-				<input type="text" name="sujet" id="sujet"><br>
+				<input type="text" name="sujet" id="sujet"><br><br>
 				<label for="pays">Pays</label>
 				<select name="pays" id="pays">
 					<option value="france">France</option>
@@ -135,7 +143,7 @@
 					<option value="suisse">Suisse</option>
 					<option value="luxembourg">Luxembourg</option>
 					<option value="allemagne">Allemagne</option>
-				</select><br>
+				</select><br><br>
 				<label for="message">Message:</label><br>
 				<textarea name="message" id="message" cols="30" rows="10" placeholder="Entrez votre message"></textarea><br>
 				<input type="button" value="Envoyer !">
