--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -84,6 +84,15 @@
 			<header>
 				<h3>Compétences</h3>
 			</header>
+			<div class="turn">
+				HTML
+			</div>
+			<div class="turn">
+				CSS
+			</div>
+			<div class="turn">
+				PHP
+			</div>
 			<ul>
 				<li>Logiciels Libres & Linux</li>
 				<li>Maintenance Informatique</li>
