Ajout Menu, peaufinage CSS

--- a/ExerciceCV/index.html
+++ b/ExerciceCV/index.html
@@ -20,9 +20,19 @@
 				</p>
 			</header>
 		</section>
+		<nav>
+			<ul>
+				<li><a href="./index.html#experiences">Expériences Professionnelles</a></li>
+				<li><a href="./index.html#formations">Formations</a></li>
+				<li><a href="./index.html#competences">Compétences</a></li>
+				<li><a href="./index.html#centres">Centres d'Intérêt</a></li>
+				<li><a href="./index.html#langues">Langues</a></li>
+				<li><a href="./index.html#formulaire">Contact</a></li>
+			</ul>
+		</nav>
 		<section>
 			<header>
-				<h3>Expériences Professionnelles</h3>
+				<h3 id="experiences">Expériences Professionnelles</h3>
 			</header>
 			<article>
 				<h4>Cinemeccanica, Montreuil -- <i>Technicien de maintenance</i></h4>
@@ -49,7 +59,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Formations</h3>
+				<h3 id="formations">Formations</h3>
 			</header>
 			<article>
 				<h4>IFA, Metz -- <i>Formation Professionelle</i></h4>
@@ -81,7 +91,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Compétences</h3>
+				<h3 id="competences">Compétences</h3>
 			</header>
 			<div class="turn">
 				HTML
@@ -101,7 +111,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Centres d'intérêt</h3>
+				<h3 id="centres">Centres d'Intérêt</h3>
 			</header>
 			<ul>
 				<li>Linux & Logiciels Libres</li>
@@ -112,7 +122,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Langues</h3>
+				<h3 id="langues">Langues</h3>
 			</header>
 				<ul>
 					<li>Anglais: Lu & Parlé</li>
@@ -121,7 +131,7 @@
 		</section>
 		<section>
 			<header>
-				<h3>Formulaire de Contact</h3>
+				<h3 id="formulaire">Formulaire de Contact</h3>
 			</header>
 			<form action="index.html" method="POST">
 				<label for="nom">Nom:</label><br>
