--- a/ExerciceFlex/index.html
+++ b/ExerciceFlex/index.html
@@ -27,13 +27,13 @@
 
 		<article>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum natus et nemo quod animi dolorem, est quidem enim voluptatum, aperiam quas accusamus dolorum, adipisci tempora assumenda ad illum rem vitae.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum natus et nemo quod animi dolorem, est quidem enim voluptatum, aperiam quas accusamus dolorum, adipisci tempora assumenda ad illum rem vitae. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, enim. Vitae inventore non earum, atque eligendi. Repudiandae provident saepe omnis pariatur quidem numquam aliquid, vero velit explicabo! Mollitia quis, facilis.
 			</p>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate asperiores veritatis dignissimos blanditiis perferendis, aspernatur, harum sit aut, nulla et id nam autem, commodi reprehenderit vero. Ipsa libero voluptatem suscipit.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate asperiores veritatis dignissimos blanditiis perferendis, aspernatur, harum sit aut, nulla et id nam autem, commodi reprehenderit vero. Ipsa libero voluptatem suscipit. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusamus ut dolore? Maxime temporibus provident aperiam dolores possimus eius ad consectetur, totam optio doloremque eum odit, inventore odio quod autem!
 			</p>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore porro iure natus dolorem placeat, minima nihil sequi quaerat nobis corrupti! A suscipit in ab nesciunt architecto itaque delectus autem debitis.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore porro iure natus dolorem placeat, minima nihil sequi quaerat nobis corrupti! A suscipit in ab nesciunt architecto itaque delectus autem debitis. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor tenetur suscipit dolorem nemo, aliquid quidem nisi. Assumenda voluptas nihil minima ut alias dignissimos, illum magni quis culpa. Possimus, soluta!
 			</p>
 		</article>
 		<aside id="aside2">
