--- a/ExerciceGrid/index.html
+++ b/ExerciceGrid/index.html
@@ -8,43 +8,43 @@
 <body>
 	<h1>GRIDLayout</h1>
 
-<!-- 	div.gridContainer>div.black$*4^div.blue$*4^div.red$*5^div.yellow$*5^div.white$*16
-	 -->
+<!-- div.gridContainer>div.n$*4^div.b$*4^div.r$*5^div.y$*5^div.w$*16 -->
+
 	 <div class="gridContainer">
- 		<div id="black1"></div>
- 		<div id="black2"></div>
- 		<div id="black3"></div>
- 		<div id="black4"></div>
-	 	<div id="blue1"></div>
-	 	<div id="blue2"></div>
-	 	<div id="blue3"></div>
-	 	<div id="blue4"></div>
-	 	<div id="red1"></div>
-	 	<div id="red2"></div>
-	 	<div id="red3"></div>
-	 	<div id="red4"></div>
-	 	<div id="red5"></div>
-	 	<div id="yellow1"></div>
-	 	<div id="yellow2"></div>
-	 	<div id="yellow3"></div>
-	 	<div id="yellow4"></div>
-	 	<div id="yellow5"></div>
-	 	<div id="white1"></div>
-	 	<div id="white2"></div>
-	 	<div id="white3"></div>
-	 	<div id="white4"></div>
-	 	<div id="white5"></div>
-	 	<div id="white6"></div>
-	 	<div id="white7"></div>
-	 	<div id="white8"></div>
-	 	<div id="white9"></div>
-	 	<div id="white10"></div>
-	 	<div id="white11"></div>
-	 	<div id="white12"></div>
-	 	<div id="white13"></div>
-	 	<div id="white14"></div>
-	 	<div id="white15"></div>
-	 	<div id="white16"></div>	
+ 		<div id="n1"></div>
+ 		<div id="n2"></div>
+ 		<div id="n3"></div>
+ 		<div id="n4"></div>
+	 	<div id="b1"></div>
+	 	<div id="b2"></div>
+	 	<div id="b3"></div>
+	 	<div id="b4"></div>
+	 	<div id="r1"></div>
+	 	<div id="r2"></div>
+	 	<div id="r3"></div>
+	 	<div id="r4"></div>
+	 	<div id="r5"></div>
+	 	<div id="y1"></div>
+	 	<div id="y2"></div>
+	 	<div id="y3"></div>
+	 	<div id="y4"></div>
+	 	<div id="y5"></div>
+	 	<div id="w1"></div>
+	 	<div id="w2"></div>
+	 	<div id="w3"></div>
+	 	<div id="w4"></div>
+	 	<div id="w5"></div>
+	 	<div id="w6"></div>
+	 	<div id="w7"></div>
+	 	<div id="w8"></div>
+	 	<div id="w9"></div>
+	 	<div id="w10"></div>
+	 	<div id="w11"></div>
+	 	<div id="w12"></div>
+	 	<div id="w13"></div>
+	 	<div id="w14"></div>
+	 	<div id="w15"></div>
+	 	<div id="w16"></div>	
 	</div>
 </body>
 </html>
