Fini exercice rebond

--- a/ExerciceAnimationCSS/balleQuiRebondit.html
+++ b/ExerciceAnimationCSS/balleQuiRebondit.html
@@ -8,7 +8,9 @@
 <body>
 	<h1>BalleQuiRebondit</h1>
 	<div class="conteneur">
-		<div class="rebond" ></div>
+		<div class="rebond" >
+		<!--  	<img src="http://164.132.54.249/stagiaire/ran1/poulet.png"> 	 -->
+		</div>
 	</div>
 </body>
 </html>
