Commit Fin de Journée

--- a/ExerciceAnimationCSS/balleQuiRebondit.html
+++ b/ExerciceAnimationCSS/balleQuiRebondit.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="balleQuiRebondit.css">
-	<title>CSS Animation</title>
+	<title>BalleQuiRebondit</title>
 </head>
 <body>
 	<h1>BalleQuiRebondit</h1>
