--- a/ExerciceAnimationCSS/carreQuiTourne.html
+++ b/ExerciceAnimationCSS/carreQuiTourne.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="carreQuiTourne.css">
-	<title>CSS Animation</title>
+	<title>CarreQuiTourne</title>
 </head>
 <body>
 	<div>
