--- a/ExerciceAnimationCSS/menuQuiTombe.html
+++ b/ExerciceAnimationCSS/menuQuiTombe.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="menuQuiTombe.css">
-	<title>MenuTombe</title>
+	<title>MenuQuiTombe</title>
 </head>
 <body>
 	<div id="tombe">TeSt</div>
