--- a/ExerciceAnimationCSS/faireLaQueue.html
+++ b/ExerciceAnimationCSS/faireLaQueue.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="conteneur">
+		<h1>Faire La Queue</h1>
 		<div class="item1">1</div>
 		<div class="item2">2</div>
 		<div class="item3">3</div>
