--- a/ExercicesResponsive/PageWeb.html
+++ b/ExercicesResponsive/PageWeb.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" href="PageWeb.css">
 	<title>Page WEB</title>
 </head>
@@ -10,17 +11,21 @@
 		<h1>This is Heading !</h1>
 	</header>
 	
+	<section>
+
 		<p id="p1">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odio qui dolores consectetur reiciendis accusamus accusantium incidunt fuga fugit quaerat. Quam cupiditate voluptas expedita officia voluptatem repellat rem dolorum sunt.
 		</p>
 
 		<p id="p2">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia numquam, totam maxime, pariatur alias laudantium sed, nesciunt saepe recusandae rem enim itaque ut id libero quos eaque maiores, voluptates amet.
 		</p>
 
 		<p id="p3">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum cum, eligendi in obcaecati iste repudiandae, vitae quas ipsum libero harum, ipsam provident nam doloribus nostrum nisi! Aperiam suscipit soluta autem!
 		</p>
+
+	</section>
 
 	<footer id="footer">
 		<h1>This is Footer !</h1>
