Changement CSS + Efface id - Exercice 1

--- a/ExercicesResponsive/PageWeb.html
+++ b/ExercicesResponsive/PageWeb.html
@@ -6,29 +6,35 @@
 	<link rel="stylesheet" href="PageWeb.css">
 	<title>Page WEB</title>
 </head>
-<body class="gridContainer">
-	<header id="header">
+<body>
+	<header>
 		<h1>This is Heading !</h1>
+		<div>
+			Cette partie n'est visible qu'au dessus de 800 pixels.
+		</div>
 	</header>
 	
 	<section>
 
-		<p id="p1">
+		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odio qui dolores consectetur reiciendis accusamus accusantium incidunt fuga fugit quaerat. Quam cupiditate voluptas expedita officia voluptatem repellat rem dolorum sunt.
 		</p>
 
-		<p id="p2">
+		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia numquam, totam maxime, pariatur alias laudantium sed, nesciunt saepe recusandae rem enim itaque ut id libero quos eaque maiores, voluptates amet.
 		</p>
 
-		<p id="p3">
+		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet voluptatibus excepturi totam facilis commodi nobis explicabo, recusandae blanditiis nisi inventore consectetur sed nemo, numquam quae esse, minima quisquam odit voluptatem! <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum cum, eligendi in obcaecati iste repudiandae, vitae quas ipsum libero harum, ipsam provident nam doloribus nostrum nisi! Aperiam suscipit soluta autem!
 		</p>
 
 	</section>
 
-	<footer id="footer">
+	<footer>
 		<h1>This is Footer !</h1>
+		<div>
+			Cette partie n'est visible que lors de l'impression.
+		</div>
 	</footer>
 </body>
 </html>
