Commit fin de matinée

--- a/ExercicesResponsive/siteMeteo.html
+++ b/ExercicesResponsive/siteMeteo.html
@@ -2,21 +2,23 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
 	<link rel="stylesheet" href="siteMeteo.css">
 	<title>SiteMétéo</title>
 </head>
 <body>
 
-	<section class='un'>
-		<h1>Metz</h1>
-		<div>
-			Jeudi 15 Avril
+	<section>
+		<div class="un">
+			<h1>Metz</h1>
+			<h3>Jeudi 15 Avril</h3>
 		</div>
-		<div>
+		<div class="meteo">
 			<i class='fas fa-cloud-showers-heavy' style='font-size:48px;'></i>
 			<h2>16°</h2>
-			<p>
+
+			<p class="right">
 				Précipitations: 90% <br> Vent: 35km/h <br> Saint Paul
 			</p>
 		</div>
