Commit de fin de journée

--- a/ExercicesResponsive/siteMeteo.html
+++ b/ExercicesResponsive/siteMeteo.html
@@ -9,57 +9,93 @@
 </head>
 <body>
 
-	<section>
-		<div class="un">
-			<h1>Metz</h1>
-			<h3>Jeudi 15 Avril</h3>
-		</div>
-		<div class="meteo">
-			<i class='fas fa-cloud-showers-heavy' style='font-size:48px;'></i>
-			<h2>16°</h2>
-
-			<p class="right">
+	<section class="GridContainer">
+		
+			<h1 id='ville'>Metz</h1>
+			<h3 id='date'>Jeudi 15 Avril</h3>
+			<i id='icon'class='fas fa-cloud-showers-heavy' style='font-size:55px;'></i>
+			<h2 id='temp'>16°</h2>
+			<p id='info'>
 				Précipitations: 90% <br> Vent: 35km/h <br> Saint Paul
 			</p>
-		</div>
+		
 	</section>
 
-	<section>
+	<section class="Container">
 		<p>
 			Vendredi
 		</p>
 			<i class='fas fa-cloud-sun-rain' style='font-size:48px;'></i>		
 		<p>
-			18° <br> 20°
+			18° <br class="hide"> 20°
 		</p>
 		<p>
-			Saint Georges
+			St Georges
 		</p>
 	</section>
 	
-	<section>
+	<section class="Container">
 		<p>
-			Samedi
+			Samedi 
 		</p>
-		<i class='fas fa-cloud-rain' style='font-size:48px'></i>
+		<i class='fas fa-cloud-rain'  style='font-size:48px'></i>
 		<p>
-			18° <br> 20°
+			18° <br class="hide"> 20°
 		</p>
 		<p>
-			Saint Ringo
+			St Ringo
 		</p>
 	</section>
 
-	<section>
+	<section class="Container">
 		<p>
 			Dimanche
 		</p>
 		<i class='fas fa-sun' style='font-size:48px'></i>
 		<p>
-			18° <br> 20°
+			18° <br class="hide"> 20°
 		</p>
 		<p>
-			Saint John
+			St John
+		</p>
+	</section>
+
+	<section class="Container">
+		<p>
+			Lundi
+		</p>
+		<i class='fas fa-sun' style='font-size:48px'></i>
+		<p>
+			18° <br class="hide"> 20°
+		</p>
+		<p>
+			St John
+		</p>
+	</section>
+
+	<section class="Container">
+		<p>
+			Mardi
+		</p>
+		<i class='fas fa-sun' style='font-size:48px'></i>
+		<p>
+			18° <br class="hide"> 20°
+		</p>
+		<p>
+			St John
+		</p>
+	</section>
+
+	<section class="Container">
+		<p>
+			Mercredi
+		</p>
+		<i class='fas fa-sun' style='font-size:48px'></i>
+		<p>
+			18° <br class="hide"> 20°
+		</p>
+		<p>
+			St John
 		</p>
 	</section>
 
