--- a/ExercicesResponsive/siteMeteo.html
+++ b/ExercicesResponsive/siteMeteo.html
@@ -13,7 +13,7 @@
 		
 			<h1 id='ville'>Metz</h1>
 			<h3 id='date'>Jeudi 15 Avril</h3>
-			<i id='icon'class='fas fa-cloud-showers-heavy' style='font-size:55px;'></i>
+			<i id='icon'class='fas fa-cloud-showers-heavy'></i>
 			<h2 id='temp'>16°</h2>
 			<p id='info'>
 				Précipitations: 90% <br> Vent: 35km/h <br> Saint Paul
@@ -25,12 +25,12 @@
 		<p>
 			Vendredi
 		</p>
-			<i class='fas fa-cloud-sun-rain' style='font-size:48px;'></i>		
+			<i class='fas fa-cloud-sun-rain'></i>		
 		<p>
 			18° <br class="hide"> 20°
 		</p>
 		<p>
-			St Georges
+			St George
 		</p>
 	</section>
 	
@@ -38,9 +38,9 @@
 		<p>
 			Samedi 
 		</p>
-		<i class='fas fa-cloud-rain'  style='font-size:48px'></i>
+		<i class='fas fa-cloud-rain' ></i>
 		<p>
-			18° <br class="hide"> 20°
+			17° <br class="hide"> 19°
 		</p>
 		<p>
 			St Ringo
@@ -51,9 +51,9 @@
 		<p>
 			Dimanche
 		</p>
-		<i class='fas fa-sun' style='font-size:48px'></i>
+		<i class='fas fa-sun'></i>
 		<p>
-			18° <br class="hide"> 20°
+			16° <br class="hide"> 18°
 		</p>
 		<p>
 			St John
@@ -64,12 +64,12 @@
 		<p>
 			Lundi
 		</p>
-		<i class='fas fa-sun' style='font-size:48px'></i>
+		<i class='fas fa-meteor'></i>
 		<p>
-			18° <br class="hide"> 20°
+			21° <br class="hide"> 22°
 		</p>
 		<p>
-			St John
+			St Brian
 		</p>
 	</section>
 
@@ -77,12 +77,12 @@
 		<p>
 			Mardi
 		</p>
-		<i class='fas fa-sun' style='font-size:48px'></i>
+		<i class='fas fa-poo-storm'></i>
 		<p>
-			18° <br class="hide"> 20°
+			18° <br class="hide"> 19°
 		</p>
 		<p>
-			St John
+			St Martin
 		</p>
 	</section>
 
@@ -90,14 +90,15 @@
 		<p>
 			Mercredi
 		</p>
-		<i class='fas fa-sun' style='font-size:48px'></i>
+		<i class='fas fa-wind'></i>
 		<p>
-			18° <br class="hide"> 20°
+			19° <br class="hide"> 20°
 		</p>
 		<p>
-			St John
+			St Mark
 		</p>
 	</section>
+	<div style="color:black; padding:50px;">GllmR</div>
 
 </body>
 </html>
