--- a/ExerciceAnimationCSS/animation3D.html
+++ b/ExerciceAnimationCSS/animation3D.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="animation3D.css">
+	<link rel="stylesheet" href="./SCRIPT/animation3D.css">
 	<title>Animation3D</title>
 </head>
 <body>
