--- a/ExerciceAnimationCSS/balleQuiRebondit.html
+++ b/ExerciceAnimationCSS/balleQuiRebondit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="balleQuiRebondit.css">
+	<link rel="stylesheet" href="./SCRIPT/balleQuiRebondit.css">
 	<title>BalleQuiRebondit</title>
 </head>
 <body>
