--- a/ExerciceAnimationCSS/carreQuiTourne.html
+++ b/ExerciceAnimationCSS/carreQuiTourne.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="carreQuiTourne.css">
+	<link rel="stylesheet" href="./SCRIPT/carreQuiTourne.css">
 	<title>CarreQuiTourne</title>
 </head>
 <body>
