--- a/ExerciceAnimationCSS/loader.html
+++ b/ExerciceAnimationCSS/loader.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="loader.css">
+	<link rel="stylesheet" href="./SCRIPT/loader.css">
 	<title>Loader</title>
 </head>
 <body>
