Ajout de Mario & Barbarian

--- a/ExerciceGrid/index.html
+++ b/ExerciceGrid/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	<h1>GRIDLayout</h1>
+	<h2><a href="http://gllmr.ml/MarioCSSGrid/" style="color: deeppink">Le MARIO ! ! !</a></h2>
+	<h2><a href="http://gllmr.ml/BarbarianCSSGrid/" style="color: deeppink">Le BARBARIAN ! ! !</a></h2>
 
 <!-- div.gridContainer>div.n$*4^div.b$*4^div.r$*5^div.y$*5^div.w$*16 -->
 
