Useless Responsive Grid

--- a/ExercicesResponsive/Exercice_Grille.html
+++ b/ExercicesResponsive/Exercice_Grille.html
@@ -22,12 +22,12 @@
 			</nav>
 		</header>
 		<section>
-			<article>
+			<div class="sm1 md1 lg1">
 				<h1>Bienvenue sur mon super site perso</h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, voluptates, ab nisi perspiciatis laboriosam ipsa reiciendis architecto impedit inventore dicta possimus libero suscipit iusto fuga odit commodi eveniet beatae cum.
 				</p>
-			</article>
+			</div>
 		</section>
 		<section  class="conteneur">
 				<div class="sm1 md1 lg3">
